--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
     <div>
       <ul class="center">
         <li>
-          <a href="https://www.facebook.com/klaudiuszOn"><i class="fab fa-facebook-square"></i></a>
-          <a href="<a href="https://www.facebook.com/klaudiuszOn" class="small-text">FaceBook</a>
+          <a href="https://www.facebook.com/klaudiuszOn" target="_blank"><i class="fab fa-facebook-square"></i></a>
+          <a href="<a href="https://www.facebook.com/klaudiuszOn" target="_blank" class="small-text">FaceBook</a>
         </li>
         <li>
-          <a href="https://uk.linkedin.com/in/klaudiusz-zembrzuski-3a1737153"><i class="fab fa-linkedin"></i>
+          <a href="https://uk.linkedin.com/in/klaudiusz-zembrzuski-3a1737153" target="_blank"><i class="fab fa-linkedin"></i>
           </a>
-          <a href="https://uk.linkedin.com/in/klaudiusz-zembrzuski-3a1737153" class="small-text">LinkedIn</a>
+          <a href="https://uk.linkedin.com/in/klaudiusz-zembrzuski-3a1737153" target="_blank" class="small-text">LinkedIn</a>
         </li>
         <li>
-          <a href="https://www.instagram.com/moa21/"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.instagram.com/moa21/" class="small-text">Instagram</a>
+          <a href="https://www.instagram.com/moa21/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/moa21/" target="_blank" class="small-text">Instagram</a>
         </li>
         <li>
-          <a href="https://open.spotify.com/user/moa210?si=DEVftvjGSQKF1C5Su3kc-w"><i class="fab fa-spotify">
+          <a href="https://open.spotify.com/user/moa210?si=DEVftvjGSQKF1C5Su3kc-w" target="_blank"><i class="fab fa-spotify">
 
           </i></a>
-          <a href="https://open.spotify.com/user/moa210?si=DEVftvjGSQKF1C5Su3kc-w" class="small-text">Spotify
+          <a href="https://open.spotify.com/user/moa210?si=DEVftvjGSQKF1C5Su3kc-w" target="_blank" class="small-text">Spotify
           </a>
         </li>
         <li>
-          <a href="https://www.imdb.com/user/ur24732138/"><i class="fab fa-imdb"></i></a>
-          <a href="https://www.imdb.com/user/ur24732138/" class="small-text">IMDB</a>
+          <a href="https://www.imdb.com/user/ur24732138/" target="_blank"><i class="fab fa-imdb"></i></a>
+          <a href="https://www.imdb.com/user/ur24732138/" target="_blank" class="small-text">IMDB</a>
         </li>
       </ul>
     </div>
@@ -56,7 +56,7 @@
                 <div id="sylvian" class="background-image">
                 </div>
               </td>
-              <td><h3><a href="https://www.youtube.com/watch?v=h-_NNIX8cDA">Sylvan Esso - Die Young</a></h3>
+              <td><h3><a href="https://www.youtube.com/watch?v=h-_NNIX8cDA" target="_blank" >Sylvan Esso - Die Young</a></h3>
               <p>
               Sylvan Esso is an American electronic pop duo from Durham, North Carolina formed in 2013. The band consists of singer Amelia Meath (Mountain Man) and producer Nick Sanborn (Megafaun, Made of Oak).
               </p></td>
@@ -66,7 +66,7 @@
                 <div id="abra" class="background-image">
                 </div>
               </td>
-              <td><h3><a href="https://www.youtube.com/watch?v=wjGnnjZVHPI">ABRA - NEEDSUMBODY</a></h3>
+              <td><h3><a href="https://www.youtube.com/watch?v=wjGnnjZVHPI" target="_blank">ABRA - NEEDSUMBODY</a></h3>
               <p>Gabrielle Olivia Mirville, known professionally as Abra (stylized as ABRA), is an American singer, songwriter, and record producer signed to Awful Records.</p></td>
             </tr>
             <tr>
@@ -74,7 +74,7 @@
                 <div id="coffe" class="background-image">
                 </div>
               </td>
-              <td><h3><a href="https://www.youtube.com/watch?v=osQUJTBGCMs">Black Coffee - Come with me</a></h3>
+              <td><h3><a href="https://www.youtube.com/watch?v=osQUJTBGCMs" target="_blank">Black Coffee - Come with me</a></h3>
               <p>Nkosinathi Innocent Maphumulo (born 11 March 1976), better known by his stage name Black Coffee, is a South African record producer and DJ.
               </p></td>
             </tr>
@@ -83,7 +83,7 @@
                 <div id="bowie" class="background-image">
                 </div>
               </td>
-              <td><h3><a href="https://www.youtube.com/watch?v=33shw2u80hM">David Bowie and Klax - Heroes</a></h3>
+              <td><h3><a href="https://www.youtube.com/watch?v=33shw2u80hM" target="_blank">David Bowie and Klax - Heroes</a></h3>
               <p>Klax is the formation of three cheeky chaps from Brighton; Benny, Ben and Joel.
               </p></td>
             </tr>
@@ -92,16 +92,16 @@
                 <div id="noze" class="background-image">
                 </div>
               </td>
-              <td><h3><a href="https://www.youtube.com/watch?v=tYq853Gk-o0">Noze - Apache</a></h3>
+              <td><h3><a href="https://www.youtube.com/watch?v=tYq853Gk-o0" target="_blank">Noze - Apache</a></h3>
                 <p>Nôze alongside Ark and Cabanne have defined the new school of French tech-house, fusing dance with jazz and rock, resulting in an explosive cocktail of freeminded spirits and last but not least, in a real performance on stage.
                 </p></td>
             </tr>
           </tbody>
         </table>
       </div>
-      <div id="footer"><footer class="center"> <a href="https://github.com/moa210/"><i class="fab fa-github-alt"></i></a>
+      <div id="footer"><footer class="center"> <a href="https://github.com/moa210/" target="_blank"><i class="fab fa-github-alt"></i></a>
         <div class="small-text">
-          <a href="https://github.com/moa210/">GitHub</a>
+          <a href="https://github.com/moa210/" target="_blank">GitHub</a>
           <p>klaudiusz zembrzuski 2018</p>
         </div>
       </footer>
