--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="container center">
       <p>
-        I enjoy new challenges and learning - always looking for something new to do. I work in a public sector regulating health care and social care providers. I enjoy thought provoking cinema, going to concerts and listening to variety of music, I am also intrested in arts and politics.
+        I enjoy new challenges and learning - always looking for something new to do. I work in a public sector regulating health and social care providers. I enjoy thought provoking cinema, going to concerts and listening to variety of music, I am also intrested in arts and politics.
       </p>
     </div>
     <div>
