--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>klaudiusz's profile</title>
+    <meta name="description" content="klaudiusz zembrzuski- personal profile">
+    <meta name="keywords" content="HTML,CSS,Ruby,JavaScript,coding,devloper">
+    <meta name="author" content="klaudiusz">
     <meta charset="utf-8">
   </head>
   <body>
@@ -67,7 +70,7 @@
                 </div>
               </td>
               <td><h3><a href="https://www.youtube.com/watch?v=wjGnnjZVHPI" target="_blank">ABRA - NEEDSUMBODY</a></h3>
-              <p>Gabrielle Olivia Mirville, known professionally as Abra (stylized as ABRA), is an American singer, songwriter, and record producer signed to Awful Records.</p></td>
+              <p>Gabrielle Olivia Mirville, known professionally as Abra, is an American singer, songwriter, and record producer signed to Awful Records.</p></td>
             </tr>
             <tr>
               <td>
@@ -75,7 +78,7 @@
                 </div>
               </td>
               <td><h3><a href="https://www.youtube.com/watch?v=osQUJTBGCMs" target="_blank">Black Coffee - Come with me</a></h3>
-              <p>Nkosinathi Innocent Maphumulo (born 11 March 1976), better known by his stage name Black Coffee, is a South African record producer and DJ.
+              <p>Nkosinathi Innocent Maphumulo, better known by his stage name Black Coffee, is a South African record producer and DJ.
               </p></td>
             </tr>
             <tr>
