--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="container center">
       <p>
-        I enjoy new challenges and learning - always looking for something new to do. I work in a public sector regulating health and social care providers. I enjoy thought provoking cinema, going to concerts and listening to variety of music, I am also intrested in arts and politics.
+        I enjoy new challenges and learning - always looking for something new to do. I work in a public sector regulating health and social care providers but recently got intrested in coding. I enjoy working in object oriented programming languages such as Ruby or JavaScript as well as creative front end development. I love thought provoking European cinema, going to concerts and listening to variety of music while cycling around London. I am also intrested in arts and politics.
       </p>
     </div>
     <div>
