--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <a href="<a href="https://www.facebook.com/klaudiuszOn" target="_blank" class="small-text">FaceBook</a>
         </li>
         <li>
-          <a href="https://uk.linkedin.com/in/klaudiusz-zembrzuski-3a1737153" target="_blank"><i class="fab fa-linkedin"></i>
+          <a href="https://www.linkedin.com/in/klaudiusz-z-53744229" target="_blank"><i class="fab fa-linkedin"></i>
           </a>
-          <a href="https://uk.linkedin.com/in/klaudiusz-zembrzuski-3a1737153" target="_blank" class="small-text">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/klaudiusz-z-53744229" target="_blank" class="small-text">LinkedIn</a>
         </li>
         <li>
           <a href="https://www.instagram.com/moa21/" target="_blank"><i class="fab fa-instagram"></i></a>
