--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <div class="container center">
-      <div id="navbar">
-
+    <div class="container center" id="navbar">
+        <a href="javascript:void(0)">
       <img src="images/selfie.jpg" id="circle" alt="Klaudiusz">
         <h1>klaudiusz zembrzuski</h1>
       <h2>Junior Full Stack Developer</h2>
-      </div>
+      </a>
     </div>
     <div class="container center">
       <p>I am able to pick up new technologies quickly and I am devoted to ongoing development and challenging myself both professionally and personally.</p>
