--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
       <h2>Junior Full Stack Developer</h2>
     </div>
     </a>
+    
+    <div class="container center">
+      <p>I am able to pick up new technologies quickly and I am devoted to ongoing development and challenging myself both professionally and personally.</p>
+      <p>I have a good understanding of software development and engineering best practice I have over 10 years experience in leading teams and services and supporting various projects leading to quality improvement.</p>
+      <p>I enjoy new challenges and learning - always looking for something new to do. I enjoy working in object oriented programming languages such as Ruby or JavaScript as well as creative front-end development. I love thought provoking European cinema, going to concerts and listening to variety of music while cycling around London. I am also interested in arts and politics.</p>
+    </div>
+    <div class="container center">
+      <p>I am able to pick up new technologies quickly and I am devoted to ongoing development and challenging myself both professionally and personally.</p>
+      <p>I have a good understanding of software development and engineering best practice I have over 10 years experience in leading teams and services and supporting various projects leading to quality improvement.</p>
+      <p>I enjoy new challenges and learning - always looking for something new to do. I enjoy working in object oriented programming languages such as Ruby or JavaScript as well as creative front-end development. I love thought provoking European cinema, going to concerts and listening to variety of music while cycling around London. I am also interested in arts and politics.</p>
+    </div>
+    <div class="container center">
+      <p>I am able to pick up new technologies quickly and I am devoted to ongoing development and challenging myself both professionally and personally.</p>
+      <p>I have a good understanding of software development and engineering best practice I have over 10 years experience in leading teams and services and supporting various projects leading to quality improvement.</p>
+      <p>I enjoy new challenges and learning - always looking for something new to do. I enjoy working in object oriented programming languages such as Ruby or JavaScript as well as creative front-end development. I love thought provoking European cinema, going to concerts and listening to variety of music while cycling around London. I am also interested in arts and politics.</p>
+    </div>
+    <div class="container center">
+      <p>I am able to pick up new technologies quickly and I am devoted to ongoing development and challenging myself both professionally and personally.</p>
+      <p>I have a good understanding of software development and engineering best practice I have over 10 years experience in leading teams and services and supporting various projects leading to quality improvement.</p>
+      <p>I enjoy new challenges and learning - always looking for something new to do. I enjoy working in object oriented programming languages such as Ruby or JavaScript as well as creative front-end development. I love thought provoking European cinema, going to concerts and listening to variety of music while cycling around London. I am also interested in arts and politics.</p>
+    </div>
     <div class="container center">
       <p>I am able to pick up new technologies quickly and I am devoted to ongoing development and challenging myself both professionally and personally.</p>
       <p>I have a good understanding of software development and engineering best practice I have over 10 years experience in leading teams and services and supporting various projects leading to quality improvement.</p>
