--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,600|Open+Sans:400" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="images/avatar.jpg"/>
     <title>klaudiusz's profile</title>
     <meta name="description" content="klaudiusz zembrzuski- personal profile">
     <meta name="keywords" content="HTML,CSS,Ruby,JavaScript,coding,devloper">
@@ -10,6 +11,13 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <div id="navbar">
+  <a href="javascript:void(0)">Home</a>
+<p>The navbar will stick to the top when you reach its scroll position.</p>
+  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+</div>
+
+<div class="content">
     <div id="navbar">
     <a href="javascript:void(0)">
     <div class="container center">
