--- a/index.html
+++ b/index.html
@@ -9,15 +9,10 @@
     <meta name="keywords" content="HTML,CSS,Ruby,JavaScript,coding,devloper">
     <meta name="author" content="klaudiusz">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div id="navbar">
-  <a href="javascript:void(0)">Home</a>
-<p>The navbar will stick to the top when you reach its scroll position.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-</div>
-
-<div class="content">
+    <div class="content">
     <div id="navbar">
     <a href="javascript:void(0)">
     <div class="container center">
@@ -28,21 +23,6 @@
     </a>
     </div>
     
-    <div class="container center">
-      <p>I am able to pick up new technologies quickly and I am devoted to ongoing development and challenging myself both professionally and personally.</p>
-      <p>I have a good understanding of software development and engineering best practice I have over 10 years experience in leading teams and services and supporting various projects leading to quality improvement.</p>
-      <p>I enjoy new challenges and learning - always looking for something new to do. I enjoy working in object oriented programming languages such as Ruby or JavaScript as well as creative front-end development. I love thought provoking European cinema, going to concerts and listening to variety of music while cycling around London. I am also interested in arts and politics.</p>
-    </div>
-    <div class="container center">
-      <p>I am able to pick up new technologies quickly and I am devoted to ongoing development and challenging myself both professionally and personally.</p>
-      <p>I have a good understanding of software development and engineering best practice I have over 10 years experience in leading teams and services and supporting various projects leading to quality improvement.</p>
-      <p>I enjoy new challenges and learning - always looking for something new to do. I enjoy working in object oriented programming languages such as Ruby or JavaScript as well as creative front-end development. I love thought provoking European cinema, going to concerts and listening to variety of music while cycling around London. I am also interested in arts and politics.</p>
-    </div>
-    <div class="container center">
-      <p>I am able to pick up new technologies quickly and I am devoted to ongoing development and challenging myself both professionally and personally.</p>
-      <p>I have a good understanding of software development and engineering best practice I have over 10 years experience in leading teams and services and supporting various projects leading to quality improvement.</p>
-      <p>I enjoy new challenges and learning - always looking for something new to do. I enjoy working in object oriented programming languages such as Ruby or JavaScript as well as creative front-end development. I love thought provoking European cinema, going to concerts and listening to variety of music while cycling around London. I am also interested in arts and politics.</p>
-    </div>
     <div class="container center">
       <p>I am able to pick up new technologies quickly and I am devoted to ongoing development and challenging myself both professionally and personally.</p>
       <p>I have a good understanding of software development and engineering best practice I have over 10 years experience in leading teams and services and supporting various projects leading to quality improvement.</p>
@@ -70,7 +50,6 @@
         </li>
         <li>
           <a href="https://open.spotify.com/user/moa210?si=DEVftvjGSQKF1C5Su3kc-w" target="_blank"><i class="fab fa-spotify">
-
           </i></a>
           <a href="https://open.spotify.com/user/moa210?si=DEVftvjGSQKF1C5Su3kc-w" target="_blank" class="small-text">Spotify
           </a>
