--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/png" href="images/avatar.png"/>
+    <link rel="icon" type="image/png" href="images/avatar.png"/>
     <title>klaudiusz's profile</title>
     <meta name="description" content="klaudiusz zembrzuski- personal profile">
     <meta name="keywords" content="HTML,CSS,Ruby,JavaScript,coding,devloper">
