--- a/index.html
+++ b/index.html
@@ -3,29 +3,27 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,600|Open+Sans:400" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="images/avatar.png"/>
-    <link rel="icon" type="image/png" href="images/avatar.png"/>
+    <link rel="shortcut icon" type="image/png" href="images/avatar.jpg"/>
     <title>klaudiusz's profile</title>
     <meta name="description" content="klaudiusz zembrzuski- personal profile">
     <meta name="keywords" content="HTML,CSS,Ruby,JavaScript,coding,devloper">
     <meta name="author" content="klaudiusz">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div id="navbar">
     <a href="javascript:void(0)">
+    <div id="navbar">
     <div class="container center">
       <img src="images/selfie.jpg" id="circle" alt="Klaudiusz">
         <h1>klaudiusz zembrzuski</h1>
       <h2>Junior Full Stack Developer</h2>
     </div>
-    </a> 
-      <div class="content"
-      <div class="container center">
-        <p>I am able to pick up new technologies quickly and I am devoted to ongoing development and challenging myself both professionally and personally.</p>
-        <p>I have a good understanding of software development and engineering best practice I have over 10 years experience in leading teams and services and supporting various projects leading to quality improvement.</p>
-        <p>I enjoy new challenges and learning - always looking for something new to do. I enjoy working in object oriented programming languages such as Ruby or JavaScript as well as creative front-end development. I love thought provoking European cinema, going to concerts and listening to variety of music while cycling around London. I am also interested in arts and politics.</p>
+    </a>
+    
+    <div class="container center">
+      <p>I am able to pick up new technologies quickly and I am devoted to ongoing development and challenging myself both professionally and personally.</p>
+      <p>I have a good understanding of software development and engineering best practice I have over 10 years experience in leading teams and services and supporting various projects leading to quality improvement.</p>
+      <p>I enjoy new challenges and learning - always looking for something new to do. I enjoy working in object oriented programming languages such as Ruby or JavaScript as well as creative front-end development. I love thought provoking European cinema, going to concerts and listening to variety of music while cycling around London. I am also interested in arts and politics.</p>
     </div>
     <div>
       <ul class="center">
@@ -44,6 +42,7 @@
         </li>
         <li>
           <a href="https://open.spotify.com/user/moa210?si=DEVftvjGSQKF1C5Su3kc-w" target="_blank"><i class="fab fa-spotify">
+
           </i></a>
           <a href="https://open.spotify.com/user/moa210?si=DEVftvjGSQKF1C5Su3kc-w" target="_blank" class="small-text">Spotify
           </a>
@@ -54,81 +53,78 @@
         </li>
       </ul>
     </div>
-      <div class="container">
-        <h2 class="center">
-          some of my favorite tracks
-        </h2>
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  <div id="sylvian" class="background-image">
-                  </div>
-                </td>
-                <td><h3><a href="https://www.youtube.com/watch?v=h-_NNIX8cDA" target="_blank" >Sylvan Esso - Die Young</a></h3>
-                <p>
-                Sylvan Esso is an American electronic pop duo from Durham, North Carolina formed in 2013. The band consists of singer Amelia Meath (Mountain Man) and producer Nick Sanborn (Megafaun, Made of Oak).
+    <div class="container">
+      <h2 class="center">
+        some of my favorite tracks
+      </h2>
+        <table>
+          <tbody>
+            <tr>
+              <td>
+                <div id="sylvian" class="background-image">
+                </div>
+              </td>
+              <td><h3><a href="https://www.youtube.com/watch?v=h-_NNIX8cDA" target="_blank" >Sylvan Esso - Die Young</a></h3>
+              <p>
+              Sylvan Esso is an American electronic pop duo from Durham, North Carolina formed in 2013. The band consists of singer Amelia Meath (Mountain Man) and producer Nick Sanborn (Megafaun, Made of Oak).
+              </p></td>
+            </tr>
+            <tr>
+              <td>
+                <div id="abra" class="background-image">
+                </div>
+              </td>
+              <td><h3><a href="https://www.youtube.com/watch?v=wjGnnjZVHPI" target="_blank">ABRA - NEEDSUMBODY</a></h3>
+              <p>Gabrielle Olivia Mirville, known professionally as Abra, is an American singer, songwriter, and record producer signed to Awful Records.</p></td>
+            </tr>
+            <tr>
+              <td>
+                <div id="coffe" class="background-image">
+                </div>
+              </td>
+              <td><h3><a href="https://www.youtube.com/watch?v=osQUJTBGCMs" target="_blank">Black Coffee - Come with me</a></h3>
+              <p>Nkosinathi Innocent Maphumulo, better known by his stage name Black Coffee, is a South African record producer and DJ.
+              </p></td>
+            </tr>
+            <tr>
+              <td>
+                <div id="bowie" class="background-image">
+                </div>
+              </td>
+              <td><h3><a href="https://www.youtube.com/watch?v=33shw2u80hM" target="_blank">David Bowie and Klax - Heroes</a></h3>
+              <p>Klax is the formation of three cheeky chaps from Brighton; Benny, Ben and Joel.
+              </p></td>
+            </tr>
+            <tr>
+              <td>
+                <div id="noze" class="background-image">
+                </div>
+              </td>
+              <td><h3><a href="https://www.youtube.com/watch?v=tYq853Gk-o0" target="_blank">Noze - Apache</a></h3>
+                <p>Nôze alongside Ark and Cabanne have defined the new school of French tech-house, fusing dance with jazz and rock, resulting in an explosive cocktail of freeminded spirits and last but not least, in a real performance on stage.
                 </p></td>
-              </tr>
-              <tr>
-                <td>
-                  <div id="abra" class="background-image">
-                  </div>
-                </td>
-                <td><h3><a href="https://www.youtube.com/watch?v=wjGnnjZVHPI" target="_blank">ABRA - NEEDSUMBODY</a></h3>
-                <p>Gabrielle Olivia Mirville, known professionally as Abra, is an American singer, songwriter, and record producer signed to Awful Records.</p></td>
-              </tr>
-              <tr>
-                <td>
-                  <div id="coffe" class="background-image">
-                  </div>
-                </td>
-                <td><h3><a href="https://www.youtube.com/watch?v=osQUJTBGCMs" target="_blank">Black Coffee - Come with me</a></h3>
-                <p>Nkosinathi Innocent Maphumulo, better known by his stage name Black Coffee, is a South African record producer and DJ.
-                </p></td>
-              </tr>
-              <tr>
-                <td>
-                  <div id="bowie" class="background-image">
-                  </div>
-                </td>
-                <td><h3><a href="https://www.youtube.com/watch?v=33shw2u80hM" target="_blank">David Bowie and Klax - Heroes</a></h3>
-                <p>Klax is the formation of three cheeky chaps from Brighton; Benny, Ben and Joel.
-                </p></td>
-              </tr>
-              <tr>
-                <td>
-                  <div id="noze" class="background-image">
-                  </div>
-                </td>
-                <td><h3><a href="https://www.youtube.com/watch?v=tYq853Gk-o0" target="_blank">Noze - Apache</a></h3>
-                  <p>Nôze alongside Ark and Cabanne have defined the new school of French tech-house, fusing dance with jazz and rock, resulting in an explosive cocktail of freeminded spirits and last but not least, in a real performance on stage.
-                  </p></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div id="footer"><footer class="center"> <a href="https://github.com/moa210/" target="_blank"><i class="fab fa-github-alt"></i></a>
-          <div class="small-text">
-            <a href="https://github.com/moa210/" target="_blank">GitHub</a>
-            <p>klaudiusz zembrzuski 2018</p>
-          </div>
-        </footer>
+            </tr>
+          </tbody>
+        </table>
       </div>
-    </div>
-      <script>
-      window.onscroll = function() {myFunction()};
-
-      var navbar = document.getElementById("navbar");
-      var sticky = navbar.offsetTop;
-
-      function myFunction() {
-        if (window.pageYOffset >= sticky) {
-          navbar.classList.add("sticky")
-        } else {
-          navbar.classList.remove("sticky");
-        }
+      <div id="footer"><footer class="center"> <a href="https://github.com/moa210/" target="_blank"><i class="fab fa-github-alt"></i></a>
+        <div class="small-text">
+          <a href="https://github.com/moa210/" target="_blank">GitHub</a>
+          <p>klaudiusz zembrzuski 2018</p>
+        </div>
+      </footer>
+      </div>                                                              
+    <script>
+    window.onscroll = function() {myFunction()};
+    var navbar = document.getElementById("navbar");
+    var sticky = navbar.offsetTop;
+    function myFunction() {
+      if (window.pageYOffset >= sticky) {
+        navbar.classList.add("sticky")
+      } else {
+        navbar.classList.remove("sticky");
       }
-      </script>
+    }
+    </script>
   </body>
 </html>
