--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h2>Junior Full Stack Developer</h2>
     </div>
     </a>
-    
+    <div class = "content">
     <div class="container center">
       <p>I am able to pick up new technologies quickly and I am devoted to ongoing development and challenging myself both professionally and personally.</p>
       <p>I have a good understanding of software development and engineering best practice I have over 10 years experience in leading teams and services and supporting various projects leading to quality improvement.</p>
@@ -113,7 +113,8 @@
           <p>klaudiusz zembrzuski 2018</p>
         </div>
       </footer>
-      </div>                                                              
+      </div> 
+   </div>
     <script>
     window.onscroll = function() {myFunction()};
     var navbar = document.getElementById("navbar");
