--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <a href="javascript:void(0)">
     <div id="navbar">
-    <div class="container-first center">
+    <div class="container center">
       <img src="images/selfie.jpg" id="circle" alt="Klaudiusz">
         <h1>klaudiusz zembrzuski</h1>
       <h2>Junior Full Stack Developer</h2>
