--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h1>klaudiusz zembrzuski</h1>
       <h2>Junior Full Stack Developer</h2>
     </div>
+    </div>
     </a>
     <div class = "content">
     <div class="container center">
