--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="container-first center">
               <img src="images/selfie.jpg" id="circle" alt="klaudiusz">
               <h1>klaudiusz zembrzuski</h1>
-              <h2>Junior Full Stack Developer</h2>
+              <h2>Full Stack Developer</h2>
             </div>
           </div>
         </a>
